--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "csv": "~0.3.6",
     "lodash": "^3.10.1",
     "optimist": "~0.6.0",
-    "restler": "~3.1.0"
+    "q": "^1.4.1",
+    "q-io": "^1.13.1",
+    "restler": "~3.1.0",
+    "restler-q": "^0.1.1"
   },
   "devDependencies": {},
   "scripts": {
